--- a/Projeto - Site/index.html
+++ b/Projeto - Site/index.html
@@ -8,30 +8,39 @@
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="syle.css">
 
-</head>
-    <header>
+<header>
+    <div class="topoum">
+        <p>+55 9 8888-8888</p>
+        <p>contato@gmail.com</p>
+    </div>
+    <div class="topodois">
         <h1 class="logo"><img src="logo.png" alt=""></h1>     
-             <nav>
-                <ul>
-                    <div class="dropdown">
-                        <button class="mainmenubtn">Home</button>
+        <nav>
+            <ul>
+                            <a href="index.html"><li>Início</li></a>
+                <div class="dropdown">
+                    <button class="mainmenubtn">Cerimonial</button>
                         <div class="dropdown-child">
-                            <a href="http://wwww.seudominio.com/pagina1.html">Balões</a>
-                            <a href="http://wwww.seudominio.com/pagina2.html">Box Party</a>
-                            <a href="http://wwww.seudominio.com/pagina3.html">Casamentos</a>
-                            <a href="http://wwww.seudominio.com/pagina4.html">Pedidos</a>
-                            <a href="http://wwww.seudominio.com/pagina5.html">Lua de Melo</a>
+                            <a href="casamentos.html"><li>Casamentos</li></a>
+                            <a href="pedidos.html"><li>Pedidos</li></a>
+                            <a href="buques.html"><li>Buquê</li></a>
+                            <a href="luademel.html"><li>Lua de Mel</li></a>
                         </div>
                         </div>
-                    <li>
-                        <a href="index.html">Serviços</a>
-                    </li>
-                    <li>
-                        <a href="contato.html">Contato</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
+                        <div class="dropdown">
+                    <button class="mainmenubtn">Celebrações</button>
+                        <div class="dropdown-child">
+                            <a href="boxparty.html"><li>Box Party</li></a>
+                            <a href="decoraçoes.html"><li>Decorações</li></a>
+                            <a href="cafe.html"><li>Café da Manhã</li></a>
+                            <a href="baloes.html"><li>Balões</li></a>
+                        </div>
+                </div>
+                            <a href="contato.html"><li>Contato</li></a>
+            </ul>
+        </nav>
+    </div>
+</header>
         
 <body>
     <main>
