--- a/Projeto - Site/index.html
+++ b/Projeto - Site/index.html
@@ -1,48 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site de Festas</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="reset.css">
-    <link rel="stylesheet" type="text/css" href="syle.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
 
-<header>
-    <div class="topoum">
-        <p>+55 9 8888-8888</p>
-        <p>contato@gmail.com</p>
-    </div>
-    <div class="topodois">
-        <h1 class="logo"><img src="logo.png" alt=""></h1>     
-        <nav>
-            <ul>
-                            <a href="index.html"><li>Início</li></a>
-                <div class="dropdown">
-                    <button class="mainmenubtn">Cerimonial</button>
-                        <div class="dropdown-child">
-                            <a href="casamentos.html"><li>Casamentos</li></a>
-                            <a href="pedidos.html"><li>Pedidos</li></a>
-                            <a href="buques.html"><li>Buquê</li></a>
-                            <a href="luademel.html"><li>Lua de Mel</li></a>
-                        </div>
-                        </div>
-                        <div class="dropdown">
-                    <button class="mainmenubtn">Celebrações</button>
-                        <div class="dropdown-child">
-                            <a href="boxparty.html"><li>Box Party</li></a>
-                            <a href="decoraçoes.html"><li>Decorações</li></a>
-                            <a href="cafe.html"><li>Café da Manhã</li></a>
-                            <a href="baloes.html"><li>Balões</li></a>
-                        </div>
-                </div>
-                            <a href="contato.html"><li>Contato</li></a>
-            </ul>
-        </nav>
-    </div>
-</header>
-        
 <body>
+    <header>
+        <div class="topoum">
+            <p>+55 9 8888-8888</p>
+            <p>contato@gmail.com</p>
+        </div>
+        <div class="topodois">
+            <div class="logo"><img src="logo.png" alt=""></div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Início</a></li>
+
+                    <li class="dropdown">
+                        <button class="mainmenubtn">Cerimonial</button>
+                        <div class="dropdown-child">
+                            <a href="../paginas/casamentos.html">Casamentos</a>
+                            <a href="../paginas/pedidos.html">Pedidos</a>
+                            <a href="../paginas/buques.html">Buquê</a>
+                            <a href="../paginas/luademel.html">Lua de Mel</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <button class="mainmenubtn">Celebrações</button>
+                        <div class="dropdown-child">
+                            <a href="../paginas/boxparty.html">Box Party</a>
+                            <a href="../paginas/decoracoes.html">Decorações</a>
+                            <a href="../paginas/cafe.html">Café da Manhã</a>
+                            <a href="../paginas/baloes.html">Balões</a>
+                        </div>
+                    </li>
+                    <li><a href="../paginas/contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
     <main>
         <div>
             <img src="imagens/teste1.jpg" alt="" class="banner">
@@ -54,9 +57,12 @@
             <img src="imagens/teste1.jpg" alt="" class="banner">
         </div>
         <div>
-            <h1> Quem Somos: </h1>
+            <h1>Quem Somos:</h1>
             <p>
-                A Celebre in Noronha foi fundada em 2022 sob a liderança dedicada e apaixonada de Cezar, um profissional experinte no setor de eventos, garantindo qualidade em cada interação com nossos clientes. Nosso compromisso é proporcionar eventos excepcionais em Fernando de Noronha, nos destacamos como uma empresa que preza pela exclência em todos os nossos serviços.
+                A Celebre in Noronha foi fundada em 2022 sob a liderança dedicada e apaixonada de Cezar, um profissional
+                experiente no setor de eventos, garantindo qualidade em cada interação com nossos clientes. Nosso
+                compromisso é proporcionar eventos excepcionais em Fernando de Noronha, nos destacamos como uma empresa
+                que preza pela excelência em todos os nossos serviços.
             </p>
         </div>
     </main>
@@ -72,28 +78,40 @@
             <img src="imagens/teste1.jpg" alt="" class="banner">
         </div>
         <div>
-            <H1>O que fazemos:</H1>
+            <h1>O que fazemos:</h1>
             <p>
-                Somos especializados em decoração de eventos e presentes personalizados para diversas celebrações, desde chás de bebê até pedidos de casamento.<br>
-                Contamos com uma diversidade de peças, elementos e cenários, com uma equipe expert na produção e montagem de eventos, visando tornar cada celebração única e inesquecível para nossos clientes.
+                Somos especializados em decoração de eventos e presentes personalizados para diversas celebrações, desde
+                chás de bebê até pedidos de casamento.<br>
+                Contamos com uma diversidade de peças, elementos e cenários, com uma equipe expert na produção e
+                montagem de eventos, visando tornar cada celebração única e inesquecível para nossos clientes.
             </p>
         </div>
     </main>
+
+    <footer>
+        <div>
+            <img src="imagens/teste1.jpg" alt="" class="banner">
+        </div>
+
+        <div><p>+55 9 8888-8888</p>
+            <p>contato@gmail.com</p>
+        </div>
+
+        <div class="midias">
+            <ul>
+                <li>
+                    <a href="https://www.instagram.com/celebreinnoronha/" target="_blank" title="instagram">
+                        <img src="imagens/instagram.png" alt="" class="banner"> 
+                    </a>
+                </li>
+                <li>
+                    <a href="https://api.whatsapp.com/send/?phone=5581996617668&text&type=phone_number&app_absent=0" target="_blank" title="whats">
+                        <img src="../imagens/whats.png" alt="" class="banner"> 
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </body>
-
-<footer>
-    <div>
-        <img src="imagens/teste1.jpg" alt="" class="banner">
-         <p> +55 9 8888-8888</p>
-         <p>contato@gmail.com</p>
-    </div>
-
-    <div class="midias">
-        <li> <img src="imagens/facebook.png" alt="" class="banner"> <a href="#" target="_blank" title="facebook"></a></li> </img>
-        <li> <img src="imagens/instagram.png" alt="" class="banner"> <a href="#" target="_blank" title="instagram"></a></li> </img>
-        <li> <img src="imagens/whats.png" alt="" class="banner"> <a href="#" target="_blank" title="youtube"></a></li> </img> 
-        <li> <img src="imagens/youtube.png" alt="" class="banner"> <a href="#" target="_blank" title="whats"></a></li> </img> 
-    </div>
-</footer>
 
 </html>
